# dotcraft

./: Cargo.toml  Manifest.toml.example  README.md  TODO.md  default.nix  flake.nix  shell.nix
src/: cli.rs  colors.rs  error.rs  helper.rs  main.rs
