[package]
name = "tread"
version = "0.1.0"
edition = "2021"

[dependencies]
flagge = { git = "https://github.com/khsaad04/flagge" }
image = "0.25.6"
material-colors = "0.4.2"
quantette = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
upon = { version = "0.10.0", default-features = false, features = ["serde"] }
